# kirino

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  SECURITY.md  deny.toml  docker-compose.yml  justfile
.github/workflows/: checks.yml  docs.yml  pr-title-check.yml  publish.yml  squash-msg-clean.yml
benches/: rbac.rs
docs/: THREAT_MODEL.md  lagrange.toml
docs/ar/: SUMMARY.md  book.toml  index.md
docs/ar/guides/: concepts.md  glossary.md  index.md  installation.md  quick-start.md
docs/ar/system/: overview.md
docs/en/: SUMMARY.md  book.toml  index.md
docs/en/guides/: concepts.md  glossary.md  index.md  installation.md  quick-start.md
docs/en/system/: overview.md
docs/es/: SUMMARY.md  book.toml  index.md
docs/es/guides/: concepts.md  glossary.md  index.md  installation.md  quick-start.md
docs/es/system/: overview.md
docs/fr/: SUMMARY.md  book.toml  index.md
docs/fr/guides/: concepts.md  glossary.md  index.md  installation.md  quick-start.md
docs/fr/system/: overview.md
docs/ja/: SUMMARY.md  book.toml  index.md
docs/ja/guides/: concepts.md  glossary.md  index.md  installation.md  quick-start.md
docs/ja/system/: overview.md
docs/ko/: SUMMARY.md  book.toml  index.md
docs/ko/guides/: concepts.md  glossary.md  index.md  installation.md  quick-start.md
docs/ko/system/: overview.md
docs/ru/: SUMMARY.md  book.toml  index.md
docs/ru/guides/: concepts.md  glossary.md  index.md  installation.md  quick-start.md
docs/ru/system/: overview.md
docs/theme/: lang-switcher.js
docs/zhs/: SUMMARY.md  book.toml  index.md
docs/zhs/guides/: concepts.md  glossary.md  index.md  installation.md  quick-start.md
docs/zhs/system/: overview.md
docs/zht/: SUMMARY.md  book.toml  index.md
docs/zht/guides/: concepts.md  glossary.md  index.md  installation.md  quick-start.md
docs/zht/system/: overview.md
examples/: auth_service.rs  basic_rbac.rs
src/: error.rs  lib.rs  test_utils.rs  utils.rs
src/auth/: mod.rs
src/auth/credential/: basic.rs  mod.rs  one_time.rs  service.rs
src/auth/identity/: anonymous.rs  basic.rs  mod.rs  service.rs  temporary.rs
src/auth/passport/: biological.rs  biometric.rs  captcha.rs  dynamic_password.rs  key_pair.rs  mod.rs  oauth.rs  static_password.rs  temporary_whitelist.rs
src/database/: db_session.rs  memory.rs  mod.rs  pg_session.rs  sql.rs
src/models/: credential.rs  identity.rs  mod.rs  passport.rs
src/rbac/: audit.rs  cache.rs  compat.rs  engine.rs  identity_subject.rs  mod.rs  permission.rs  shared.rs  subject.rs  traits.rs  workspace_guard.rs
src/rbac/constraints/: mod.rs  policies.rs  store.rs  validator.rs
src/rbac/dynamic/: anomaly.rs  arbiter.rs  delegator.rs  domain.rs  metrics.rs  mod.rs  policy.rs  trust.rs  verdict.rs
src/rbac/hierarchy/: mod.rs
src/rbac/session/: db.rs  mod.rs  pg.rs
src/rbac/store/: memory.rs  mod.rs  persistence.rs  registry.rs
src/service/login/: mod.rs
src/service/register/: mod.rs
src/service/verify/: ca.rs  mod.rs  sso.rs
src/service/verify/biological/: mod.rs  web_authn.rs
src/service/verify/captcha/: mod.rs  third_party_iframe.rs
src/service/verify/verification/: code_store.rs  email.rs  mod.rs  sms.rs
src/service/verify/whitelist/: mod.rs  network_source.rs  previous_credential.rs
