[package]
name = "kirino"
version = "0.5.0"
edition = "2021"
description = "A customizable, zero-trust authentication and authorization framework with RBAC and dynamic risk assessment."
license = "Apache-2.0"
repository = "https://github.com/celestia-island/kirino"
readme = "README.md"
rust-version = "1.75"

[lib]
crate-type = ["rlib"]

[features]
default = ["rbac-inmemory", "auth-password", "auth-jwt"]

rbac-core = []
rbac-inmemory = ["rbac-core"]
rbac-hierarchy = ["rbac-core"]
rbac-constraints = ["rbac-core"]
rbac-dynamic = ["rbac-core"]
rbac-full = [
    "rbac-inmemory",
    "rbac-hierarchy",
    "rbac-constraints",
    "rbac-dynamic",
    "auth-password",
    "auth-jwt",
]

auth-password = ["dep:argon2"]
auth-jwt = ["dep:jsonwebtoken"]

[dependencies]
anyhow = "^1"
async-trait = "^0.1"

chrono = { version = "^0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync", "macros", "rt", "time"] }
uuid = { version = "^1", features = ["serde", "v7"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
strum = { version = "^0.26", features = ["derive"] }
yuuka = "^0.5"

argon2 = { version = "^0.5", optional = true }
jsonwebtoken = { version = "9", optional = true }
rand = "^0.8"
tracing = { version = "^0.1", features = ["log"] }
